2010-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-validRequestorForSendType:returnType:):
	Don't forward this method if the delegate is a NSResponder.
	Patch by Georg Fleischmann <G.Fleischmann@vhf.de>.

2010-11-03  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSPopUpButtonCell.m (-initWithCoder:): Fixed broken selection
	with keyed unarchiver. -selectMenuItem: was given a nil item because
	the menu was not yet unarchived.
	Removed setAutoenableItems: and -setEnabled: use to match Cocoa doc
	and IB behavior. By default, -autoenableItems is YES and is archived
	by the menu. A popup can be disabled and archived as such.

2010-11-02  Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/NSView.m: Added some basic santity checkts that the views
	are in windows when converting rectangles.

2010-10-31  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSOpenPanel.m (-runModal): Added. NSOpenPanel overrides
	NSSavePanel version to take in account -allowedFileTypes as documented
	in Cocoa.

2010-10-30 German Arias <german@xelalug.org>

	* Documentation/GNUmakefile: Changes in some files names to
	correspond with the files provided in the Documentation directory.

2010-10-29 Doug Simons <doug.simons@testplant.com>

	* Source/GSThemeMenu.m
	* Source/NSPopUpButtonCell.m
	Added theme method to identify themes that handle event processing
	for PopUp (and PullDown) menus. Use that to prevent duplicate event
	handling in NSPopUpButtonCell. This fixes a problem with actions
	getting sent twice on Windows with the WinUXTheme.

2010-10-25 Doug Simons <doug.simons@testplant.com>

	* Source/GSToolbarCustomizationPalette.m:
	GSToolbarCustomizationView needs to retain its list of palette items.

2010-10-24 Riccardo Mottola

	* Source/NSTextView.m
	Fixed some c99-isms

2010-10-22 David Chisnall <theraven@gna.org>

	* Source/NSTextView.m
	* Source/GSToolTips.h
	* Source/GSToolTips.m
